force-app/main/default/objects/Demo_Request__c/Demo_Request__c.object-meta.xml
<CustomObject>
    <label>Demo Request</label>
    <nameField>
        <label>Demo Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>