force-app/main/default/objects/Demo_Request__c/fields/Demo_Dates_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_Dates_Time__c</fullName>
    <description>Date and Time for the Demo to be scheduled</description>
    <inlineHelpText>Please provide a Date and Time for the Demo to be scheduled</inlineHelpText>
    <label>Demo Dates&amp;Time</label>
    <type>DateTime</type>
</CustomField>