force-app/main/default/objects/Demo_Request__c/fields/Demo_Description__c.field-meta.xml
<CustomField>
    <fullName>Demo_Description__c</fullName>
    <description>Description of the Demo that is going to be performed by the client.</description>
    <inlineHelpText>Please provide a description of the Demo that is going to be performed by the client.</inlineHelpText>
    <label>Demo Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>