force-app/main/default/objects/Demo_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Master Detail relationship to Opportunity.</description>
    <inlineHelpText>Please select an opportunity to schedule a demo.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Demo Requests</relationshipLabel>
    <relationshipName>Demo_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>